--- a/ht-11/main.css
+++ b/ht-11/main.css
@@ -3,6 +3,11 @@
 *:after {
   box-sizing: border-box;
 }
+li {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
 .title-1 {
   color: #4242cb;
 }
@@ -10,7 +15,7 @@
   padding-top: 50px;
   text-align: center;
 }
-.input-wrapper {
+.header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,11 +24,11 @@
 .searching-input {
   padding: 10px 20px;
   font-size: 24px;
-  border-radius: 50px;
+  border-radius: 25px;
 }
-.img-wrapper {
+.images-wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   padding-top: 20px;
   padding-right: 30px;
@@ -40,7 +45,9 @@
 }
 img {
   width: 100%;
+  height: 400px;
   border-radius: 10px;
+  object-fit: cover;
   transition: transform 400ms;
 }
 img:hover {
